--- a/source/introduction.tex
+++ b/source/introduction.tex
@@ -6,4 +6,8 @@
 2
 
 \subsection*{Приборы и оборудование} \addcontentsline{toc}{subsection}{Приборы и оборудование}
-3
+
+\begin{enumerate}
+	\item Источник питания постоянного тока Б5-50;
+	\item Вольтметр универсальный GDM-8245;
+\end{enumerate}
