--- a/source/theory.tex
+++ b/source/theory.tex
@@ -2,6 +2,75 @@
 
 \subsection{Диод}
 
-Конструктивно диод состоит из баллона (стеклянного, металлического или керамического), в котором создается вакуум $10^{-7}$ мм ртутного столба, и системы плоских или цилиндрических электродов: катода и анода.
+Конструктивно диод состоит из баллона (стеклянного, металлического или керамического), в котором создается вакуум $\sim 10^{-7}$ мм ртутного столба, и системы плоских или цилиндрических электродов: катода и анода.
 
-Катод в простейшем случае представляет собой накаливаемую током вольфрамовую нить, которая при достаточно высокой температуре начинает испускать электроны (это явление получило название термоэлектронной эмиссией). Но такие прямоканальные катоды применяются очень редко; значительно большее распространение получили катоды с косвенным подогревом, где источником электронов служит эмиттер, 
+Катод в простейшем случае представляет собой накаливаемую током вольфрамовую нить, которая при достаточно высокой температуре начинает испускать электроны (это явление получило название \textit{термоэлектронной эмиссии}). Но такие прямоканальные катоды применяются очень редко; значительно большее распространение получили катоды с косвенным подогревом, где источником электронов служит эмиттер, электрически изолированный от вольфрамового подогревателя. Преимуществом таких катодов является возможность питания подогревателя переменным током (вследствие достаточно большой инерционности всей системы) и эквипотенциальность поверхности эмиттера. Эмиттеры таких катодов часто покрываются тонкой пленкой из материалов, имеющих малую работу выхода электронов, что позволяет получить хорошую эмиссию при сравнительно небольшом подогреве.
+
+Если соединить анод с катодом через чувствительный гальванометр, то можно обнаружить в этой цепи анодный ток, величина определенная электрическая мощность. Электроны, излучаемые катодом, увеличивают свою кинетическую энергию за счет энергии электрического поля. При ударе об анод электрон отдает ему свою энергию. Энергия электронов выделяется на аноде в виде тепловой энергии и излучается им в окружающее пространство. С повышением анодного напряжения увеличивается количество достигших анода электронов, их скорость и кинетическая энергия, и, следовательно, возрастает и мощность, рассеиваемая анодом. Для каждого типа ламп существует максимальная допустимая величина этой мощности -- $P_{max}$. Превышение
+ее при работе ламп может вывести последнюю из строя. Величину мощности, рассеиваемой анодом, можно подсчитать по формуле
+\begin{equation} \label{eq:0}
+	P_a = U_a I_a
+\end{equation}
+
+Уравнение $P_{a_{max}} = U_a I_a = const$ на плоскости $U_a$, $I_a$ изображается гиперболой, асимптотами которой являются координатные оси. На рис.2 эта кривая отмечена индексом "1". Чтобы лампа не вышла из строя, всегда надо следить за тем, чтобы при работе с ней не превышать максимально допустимой мощности, рассеиваемой анодом, т.е. работать только в области $P_a < P_{a_{max}}$. Для каждого типа ламп величина $P_{a_{max}}$ определяется конструкцией электродов и их геометрическими размерами. У очень мощных ламп для повышения этой мощности приходится применять меры принудительного охлаждения анода (водяное и воздушное охлаждение).
+
+Функция, выражающая зависимость анодного тока диода от величины напряжения накала $I_a = f(U_n)$, называется температурной характеристикой диода. По ней можно судить об эмиссионной способности катода, о возникновении и исчезновении пространственного заряда между катодом и анодом лампы. Для каждого типа ламп существует нормальное напряжение накала, величину которого нельзя превышать.
+
+Представление о работе диода можно составить и не зная его характеристик, если известны параметры диода: крутизна вольт-амперной характеристики 
+\begin{equation} \label{eq:1}
+	S = \frac{d I_a}{d U_a},
+\end{equation}
+измеряемая обычно в $\tfrac{\text{мА}}{\text{В}}$ или обратная ей величина -- внутренние сопротивление $R_i = \frac{1}{S}$. Т.к. характеристика диода существенно нелинейна, то это дифференциальные параметры зависят от значений $I_a$ и $U_a$, т.е. $S = f(U_a)$. На практике приближенное значение крутизны можно определить по вольтамперной харакетрчитике. Взяв небольшое приращение анодного напряжения $\Delta U_a$ так, чтобы в этих пределах участок анодной характеристики можно считать линейным, по характеристике определим приращение тока $\Delta I_a$. И тогда
+\begin{equation} \label{eq:2}
+	S \approx \frac{\Delta I_a}{\Delta U_a}
+\end{equation}
+\subsection{Обработка и построение графиков}
+\subsubsection{Функция теоретического графика крутизны $S$}
+
+Из формулы закона трех вторых мы имеем {\it степенную зависимость} данных. Для построения теоретического графика заменим переменные тока и напряжения на оси $x$ ($x = U_a$) и $y = I_a$:
+\begin{equation} \label{eq:51}
+	y = gx^{\tfrc{3}{2}}
+\end{equation}
+
+Будем использовать метод наименьших квадратов для получения значения переменной $g$ (первеанс).
+\[S = \sum_{i=1}^n \left(gx_i^{\frac{3}{2}} - y_i\right)^2 \qquad S \to min\]
+
+Для нахождения минимума функции суммы необходимо вычислить ее частную производную по $g$ и приравнять к нулю.
+\[\frac{\partial S}{\partial g} = \sum_{i=1}^n 2\left(gx_i^{\frac{3}{2}} - y_i\right)x_i^{\frac{3}{2}} = 2 \sum_{i=1}^n \left(g x_i^3 - y_i x_i^{\frac{3}{2}}\right) \qquad \frac{\partial S}{\partial g} = 0\]
+\[g \sum_{i=1}^n x_i^3 = \sum_{i=1}^n y_i x_i^{\frac{3}{2}}\]
+\begin{equation} \label{eq:52}
+	\boxed{g = \frac{\sum_{i=1}^n y_i x_i^{\frac{3}{2}}}{\sum_{i=1}^n x_i^3}}
+\end{equation}
+
+\subsection{Вычисление погрешностей}
+\subsubsection{Приборная погрешность источника питания постоянного тока Б5-50}
+
+Приборная погрешность установки выходного напряжения в режиме стабилизации напряжения не превышает:
+\begin{align} \label{leq:error:1.1}
+	\Delta U_\text{приб} = \pm (0,5\% U + 0,1\% U_\text{макс}),
+\end{align}
+где $U$ и $U_\text{макс}$ -- устанавливаемое и максимальное значение выходного напряжения прибора.
+
+Из характеристик прибор мы знаем, что $U_\text{макс} = 299 \text{ В}$, поэтому:
+\begin{align} \label{eq:error:1.2}
+	\boxed{\Delta  U_\text{приб} = 0,005U + \frac{299}{100} \text{ В}}
+\end{align}
+
+\subsubsection{Приборная погрешность GDM-8245 при измерении постоянного тока}
+
+Приборная погрешность GDM-8245 при измерении постоянного тока:
+\begin{align} \label{eq:error:2.1}
+	\boxed{\Delta I_\text{приб} = \pm (0,002 \cdot I + 2 \cdot dI)}
+\end{align}
+где $I$ и $dI$ -- получаемый ток и цена деления измерения прибора.
+
+\subsubsection{Косвенная погрешность крутизны S}
+
+Выведем формулу косвенной погрешности крутизны из формулы \cref{eq:2}:
+\[S = \frac{\Delta I_a}{\Delta U_a} = \frac{I_{a_2} - I_{a_1}}{U_{a_2} - U_{a_1}}\]  
+\begin{align} \label{eq:error:3.1}
+	\Delta S = \sqrt{\left( \frac{\partial S}{\partial I_{a_1}} \Delta I_{a_1}\right)^2 + \left( \frac{\partial S}{\partial I_{a_2}} \Delta I_{a_2}\right)^2 + \left( \frac{\partial S}{\partial U_{a_1}} \Delta U_{a_1}\right)^2 + \left( \frac{\partial S}{\partial U_{a_2}} \Delta U_{a_2}\right)^2}
+\end{align}
+\begin{multline} \label{eq:error:3.2}
+	\Delta S =\\= \sqrt{\frac{\Delta I_{a_1}^2}{(U_{a_2} - U_{a_1})^2} + \frac{\Delta I_{a_2}^2}{(U_{a_2} - U_{a_1})^2} + \frac{(I_{a_2} - I_{a_1})^2 }{(U_{a_2} - U_{a_1})^4} \Delta U_{a_1}^2 + \frac{(I_{a_2} - I_{a_1})^2 }{(U_{a_2} - U_{a_1})^4} \Delta U_{a_2}^2} = \\ = \boxed{\frac{\sqrt{(\Delta I_{a_1}^2 + \Delta I_{a_2}^2)(U_{a_2} - U_{a_1})^2 + (\Delta U_{a_1}^2 + \Delta U_{a_2}^2)(I_{a_2} - I_{a_1})^2}}{(U_{a_2} - U_{a_1})^2}}
+\end{multline}
