--- a/IBTC-physics-2k3s-latex-vacuum-tube-diodes-triodes.tex
+++ b/IBTC-physics-2k3s-latex-vacuum-tube-diodes-triodes.tex
@@ -9,6 +9,14 @@
 \def\shortlabtheme{Диоды и триоды}
 
 \graphicspath{{image/}{graph/}}
+\usepackage{booktabs}
+\usepackage{siunitx}
+\usepackage{pgfplots}
+\pgfplotsset{compat=1.18}
+\usepackage{tikz}
+
+\newcommand{\frc}[2]{\raisebox{2pt}{$#1$}\big/\raisebox{-3pt}{$#2$}}
+\newcommand{\tfrc}[2]{\raisebox{2pt}{{\footnotesize $#1$}}/\raisebox{-3pt}{{\footnotesize $#2$}}}
 
 \addbibresource{BibTeX/references.bib}
 
