--- a/source/appendix.tex
+++ b/source/appendix.tex
@@ -1,2 +1,98 @@
 \section{Приложение}
-%\appendixsection{}
+
+\appendixsection{Вычисление величины крутизны $S$} \label{app:1}
+{\small 
+\[ S_1 = \frac{I_{a_{2}} - I_{a_{1}}}{U_{a_{2}} - U_{a_{1}}} = \frac{10,16 \, \text{мА} - 3,78 \, \text{мА}}{4 \, \text{В} - 2 \, \text{В}} =\\= 3,19 \, \mathrm{ \frac{\text{мА}}{\text{В}} } \]
+\[ S_2 = \frac{I_{a_{3}} - I_{a_{2}}}{U_{a_{3}} - U_{a_{2}}} = \frac{16,88 \, \text{мА} - 10,16 \, \text{мА}}{6 \, \text{В} - 4 \, \text{В}} = 3,36 \, \mathrm{ \frac{\text{мА}}{\text{В}} } \]
+\[ S_3 = \frac{I_{a_{4}} - I_{a_{3}}}{U_{a_{4}} - U_{a_{3}}} = \frac{24,84 \, \text{мА} - 16,88 \, \text{мА}}{8 \, \text{В} - 6 \, \text{В}} = 3,98 \, \mathrm{ \frac{\text{мА}}{\text{В}} } \]
+\[ S_4 = \frac{I_{a_{5}}- I_{a_{4}}}{U_{a_{5}} - U_{a_{4}}} = \frac{32,4 \, \text{мА} - 24,84 \, \text{мА}}{10 \, \text{В} - 8 \, \text{В}} = 3,78 \, \mathrm{ \frac{\text{мА}}{\text{В}} } \]
+\[ S_5 = \frac{I_{a_{6}}- I_{a_{5}}}{U_{a_{6}} - U_{a_{5}} } = \frac{40,9 \, \text{мА} - 32,4 \, \text{мА}}{12 \, \text{В} - 10 \, \text{В}} = 4,25 \, \mathrm{ \frac{\text{мА}}{\text{В}} } \]
+\[ S_6 = \frac{I_{a_{7}} - I_{a_{6}}}{U_{a_{7}} - U_{a_{6}}} = \frac{49,94 \, \text{мА} - 40,9 \, \text{мА}}{14 \, \text{В} - 12 \, \text{В}} = 4,52 \, \mathrm{ \frac{\text{мА}}{\text{В}} } \]
+\[ S_7 = \frac{I_{a_{8}} - I_{a_{7}}}{U_{a_{8}} - U_{a_{7}}} = \frac{62,4 \, \text{мА} - 49,94 \, \text{мА}}{16 \, \text{В} - 14 \, \text{В}} = 6,23 \, \mathrm{ \frac{\text{мА}}{\text{В}} } \]
+\[ S_8 = \frac{I_{a_{9}} - I_{a_{8}}}{U_{a_{9}} - U_{a_{8}}} = \frac{73,52 \, \text{мА} - 62,4 \, \text{мА}}{18 \, \text{В} - 16 \, \text{В}} = 5,56 \, \mathrm{ \frac{\text{мА}}{\text{В}} } \]
+\[ S_9 = \frac{I_{a_{10}} - I_{a_{9}}}{U_{a_{10}} - U_{a_{9}}} = \frac{86,31 \, \text{мА} - 73,52 \, \text{мА}}{20 \, \text{В} - 18 \, \text{В}} = 6,40 \, \mathrm{ \frac{\text{мА}}{\text{В}} } \]
+}
+
+\appendixsection{Вычисление погрешности постоянного тока $I_a$} \label{app:2}
+{\small
+\[ \Delta I_{\text{приб}_{ 1 }} = 0,002 I_{a_{1}} + 0,02 = 0,002 \times 3,78 \, \text{мА} + 0,02 = 0,03 \, \mathrm{ \text{мА} } \]
+\[ \Delta I_{\text{приб}_{ 2 }} = 0,002 I_{a_{2}} + 0,02 = 0,002 \times 10,16 \, \text{мА} + 0,02 = 0,04 \, \mathrm{ \text{мА} } \]
+\[ \Delta I_{\text{приб}_{ 3 }} = 0,002 I_{a_{3}} + 0,02 = 0,002 \times 16,88 \, \text{мА} + 0,02 = 0,05 \, \mathrm{ \text{мА} } \]
+\[ \Delta I_{\text{приб}_{ 4 }} = 0,002 I_{a_{4}} + 0,02 = 0,002 \times 24,84 \, \text{мА} + 0,02 = 0,07 \, \mathrm{ \text{мА} } \]
+\[ \Delta I_{\text{приб}_{ 5 }} = 0,002 I_{a_{5}} + 0,02 = 0,002 \times 32,4 \, \text{мА} + 0,02 = 0,08 \, \mathrm{ \text{мА} } \]
+\[ \Delta I_{\text{приб}_{ 6 }} = 0,002 I_{a_{6}} + 0,02 = 0,002 \times 40,9 \, \text{мА} + 0,02 = 0,10 \, \mathrm{ \text{мА} } \]
+\[ \Delta I_{\text{приб}_{ 7 }} = 0,002 I_{a_{7}} + 0,02 = 0,002 \times 49,94 \, \text{мА} + 0,02 = 0,12 \, \mathrm{ \text{мА} } \]
+\[ \Delta I_{\text{приб}_{ 8 }} = 0,002 I_{a_{8}} + 0,02 = 0,002 \times 62,4 \, \text{мА} + 0,02 = 0,14 \, \mathrm{ \text{мА} } \]
+\[ \Delta I_{\text{приб}_{ 9 }} = 0,002 I_{a_{9}} + 0,02 = 0,002 \times 73,52 \, \text{мА} + 0,02 = 0,17 \, \mathrm{ \text{мА} } \]
+\[ \Delta I_{\text{приб}_{ 10 }} = 0,002 I_{a_{10}} + 0,02 = 0,002 \times 86,31 \, \text{мА} + 0,02 = 0,19 \, \mathrm{ \text{мА} } \]
+}
+
+\appendixsection{Вычисление погрешности  напряжения $U_a$} \label{app:3}
+{\small
+\[ \Delta U_{\text{приб}_{ 1 }} = 0,005 U_{a_{1}} + 0,299 = 0,005 \times 2 \, \text{В} + 0,299 = 0,31 \, \mathrm{ \text{В} } \]
+\[ \Delta U_{\text{приб}_{ 2 }} = 0,005 U_{a_{2}} + 0,299 = 0,005 \times 4 \, \text{В} + 0,299 = 0,32 \, \mathrm{ \text{В} } \]
+\[ \Delta U_{\text{приб}_{ 3 }} = 0,005 U_{a_{3}} + 0,299 = 0,005 \times 6 \, \text{В} + 0,299 = 0,33 \, \mathrm{ \text{В} } \]
+\[ \Delta U_{\text{приб}_{ 4 }} = 0,005 U_{a_{4}} + 0,299 = 0,005 \times 8 \, \text{В} + 0,299 = 0,34 \, \mathrm{ \text{В} } \]
+\[ \Delta U_{\text{приб}_{ 5 }} = 0,005 U_{a_{5}} + 0,299 = 0,005 \times 10 \, \text{В} + 0,299 = 0,35 \, \mathrm{ \text{В} } \]
+\[ \Delta U_{\text{приб}_{ 6 }} = 0,005 U_{a_{6}} + 0,299 = 0,005 \times 12 \, \text{В} + 0,299 = 0,36 \, \mathrm{ \text{В} } \]
+\[ \Delta U_{\text{приб}_{ 7 }} = 0,005 U_{a_{7}} + 0,299 = 0,005 \times 14 \, \text{В} + 0,299 = 0,37 \, \mathrm{ \text{В} } \]
+\[ \Delta U_{\text{приб}_{ 8 }} = 0,005 U_{a_{8}} + 0,299 = 0,005 \times 16 \, \text{В} + 0,299 = 0,38 \, \mathrm{ \text{В} } \]
+\[ \Delta U_{\text{приб}_{ 9 }} = 0,005 U_{a_{9}} + 0,299 = 0,005 \times 18 \, \text{В} + 0,299 = 0,39 \, \mathrm{ \text{В} } \]
+\[ \Delta U_{\text{приб}_{ 10 }} = 0,005 U_{a_{10}} + 0,299 = 0,005 \times 20 \, \text{В} + 0,299 = 0,40 \, \mathrm{ \text{В} } \]
+}
+
+\appendixsection{Вычисление консвенной погрешности $S$} \label{app:4}
+{\small
+\begin{multline*}
+	\Delta S_1 = \tfrac{\sqrt{\left(I_{a_{2}} - I_{a_{1}}\right)^{2} \left(\Delta U_{a_{1}}^{2} + \Delta U_{a_{2}}^{2}\right) + \left(U_{a_{2}} - U_{a_{1}}\right)^{2} \left(\Delta I_{a_{1}}^{2} + \Delta I_{a_{2}}^{2}\right)}}{\left(U_{a_{2}} - U_{a_{1}}\right)^{2}} = \\ =
+	\tfrac{\sqrt{\left(0,03  \text{мА}^{2} + 0,04  \text{мА}^{2}\right)   \left(4,0  \text{В} - 2,0  \text{В}\right)^{2} + \left(0,31  \text{В}^{2} + 0,32  \text{В}^{2}\right)   \left(10,16  \text{мА} - 3,78  \text{мА}\right)^{2}}}{\left(4,0  \text{В} - 2,0  \text{В}\right)^{2}} = 0,71  \mathrm{ \frac{\text{мА}}{\text{В}} }
+\end{multline*}
+\vspace{-2em}
+\begin{multline*}
+	\Delta S_2 = \tfrac{\sqrt{\left(I_{a_{3}} - I_{a_{2}}\right)^{2} \left(\Delta U_{a_{2}}^{2} + \Delta U_{a_{3}}^{2}\right) + \left(U_{a_{3}} - U_{a_{2}}\right)^{2} \left(\Delta I_{a_{2}}^{2} + \Delta I_{a_{3}}^{2}\right)}}{\left(U_{a_{3}} - U_{a_{2}}\right)^{2}} = \\=
+	\tfrac{\sqrt{\left(0,04  \text{мА}^{2} + 0,05  \text{мА}^{2}\right)   \left(6,0  \text{В} - 4,0  \text{В}\right)^{2} + \left(0,32  \text{В}^{2} + 0,33  \text{В}^{2}\right)   \left(16,88  \text{мА} - 10,16  \text{мА}\right)^{2}}}{\left(6,0  \text{В} - 4,0  \text{В}\right)^{2}} = 0,77  \mathrm{ \frac{\text{мА}}{\text{В}} }
+\end{multline*}
+\vspace{-2em}
+\begin{multline*}
+	\Delta S_3 = \tfrac{\sqrt{\left(I_{a_{4}} - I_{a_{3}}\right)^{2} \left(\Delta U_{a_{3}}^{2} + \Delta U_{a_{4}}^{2}\right) + \left(U_{a_{4}} - U_{a_{3}}\right)^{2} \left(\Delta I_{a_{3}}^{2} + \Delta I_{a_{4}}^{2}\right)}}{\left(U_{a_{4}} - U_{a_{3}}\right)^{2}} = \\=
+	\tfrac{\sqrt{\left(0,05  \text{мА}^{2} + 0,07  \text{мА}^{2}\right)   \left(8,0  \text{В} - 6,0  \text{В}\right)^{2} + \left(0,33  \text{В}^{2} + 0,34  \text{В}^{2}\right)   \left(24,84  \text{мА} - 16,88  \text{мА}\right)^{2}}}{\left(8,0  \text{В} - 6,0  \text{В}\right)^{2}} = 0,94  \mathrm{ \frac{\text{мА}}{\text{В}} }
+\end{multline*}
+\vspace{-2em}
+\begin{multline*}
+	\Delta S_4 = \tfrac{\sqrt{\left(I_{a_{5}} - I_{a_{4}}\right)^{2} \left(\Delta U_{a_{4}}^{2} + \Delta U_{a_{5}}^{2}\right) + \left(U_{a_{5}} - U_{a_{4}}\right)^{2} \left(\Delta I_{a_{4}}^{2} + \Delta I_{a_{5}}^{2}\right)}}{\left(U_{a_{5}} - U_{a_{4}}\right)^{2}} = \\=
+	\tfrac{\sqrt{\left(0,07  \text{мА}^{2} + 0,08  \text{мА}^{2}\right)   \left(10,0  \text{В} - 8,0  \text{В}\right)^{2} + \left(0,34  \text{В}^{2} + 0,35  \text{В}^{2}\right)   \left(32,4  \text{мА} - 24,84  \text{мА}\right)^{2}}}{\left(10,0  \text{В} - 8,0  \text{В}\right)^{2}} = 0,92  \mathrm{ \frac{\text{мА}}{\text{В}} }
+\end{multline*}
+\vspace{-2em}
+\begin{multline*}
+	\Delta S_5 = \tfrac{\sqrt{\left(I_{a_{6}} - I_{a_{5}}\right)^{2} \left(\Delta U_{a_{5}}^{2} + \Delta U_{a_{6}}^{2}\right) + \left(U_{a_{6}} - U_{a_{5}}\right)^{2} \left(\Delta I_{a_{5}}^{2} + \Delta I_{a_{6}}^{2}\right)}}{\left(U_{a_{6}} - U_{a_{5}}\right)^{2}} = \\=
+	\tfrac{\sqrt{\left(0,08  \text{мА}^{2} + 0,1  \text{мА}^{2}\right)   \left(12,0  \text{В} - 10,0  \text{В}\right)^{2} + \left(0,35  \text{В}^{2} + 0,36  \text{В}^{2}\right)   \left(40,9  \text{мА} - 32,4  \text{мА}\right)^{2}}}{\left(12,0  \text{В} - 10,0  \text{В}\right)^{2}} = 1,07  \mathrm{ \frac{\text{мА}}{\text{В}} }
+\end{multline*}
+\vspace{-2em}
+\begin{multline*}
+	\Delta S_6 = \tfrac{\sqrt{\left(I_{a_{7}} - I_{a_{6}}\right)^{2} \left(\Delta U_{a_{6}}^{2} + \Delta U_{a_{7}}^{2}\right) + \left(U_{a_{7}} - U_{a_{6}}\right)^{2} \left(\Delta I_{a_{6}}^{2} + \Delta I_{a_{7}}^{2}\right)}}{\left(U_{a_{7}} - U_{a_{6}}\right)^{2}} = \\=
+	\tfrac{\sqrt{\left(0,1  \text{мА}^{2} + 0,12  \text{мА}^{2}\right)   \left(14,0  \text{В} - 12,0  \text{В}\right)^{2} + \left(0,36  \text{В}^{2} + 0,37  \text{В}^{2}\right)   \left(49,94  \text{мА} - 40,9  \text{мА}\right)^{2}}}{\left(14,0  \text{В} - 12,0  \text{В}\right)^{2}} = 1,17  \mathrm{ \frac{\text{мА}}{\text{В}} }
+\end{multline*}
+\vspace{-2em}
+\begin{multline*}
+	\Delta S_7 = \tfrac{\sqrt{\left(I_{a_{8}} - I_{a_{7}}\right)^{2} \left(\Delta U_{a_{7}}^{2} + \Delta U_{a_{8}}^{2}\right) + \left(U_{a_{8}} - U_{a_{7}}\right)^{2} \left(\Delta I_{a_{7}}^{2} + \Delta I_{a_{8}}^{2}\right)}}{\left(U_{a_{8}} - U_{a_{7}}\right)^{2}} = \\=
+	\tfrac{\sqrt{\left(0,12  \text{мА}^{2} + 0,14  \text{мА}^{2}\right)   \left(16,0  \text{В} - 14,0  \text{В}\right)^{2} + \left(0,37  \text{В}^{2} + 0,38  \text{В}^{2}\right)   \left(62,4  \text{мА} - 49,94  \text{мА}\right)^{2}}}{\left(16,0  \text{В} - 14,0  \text{В}\right)^{2}} = 1,65  \mathrm{ \frac{\text{мА}}{\text{В}} }
+\end{multline*}
+\vspace{-2em}
+\begin{multline*}
+	\Delta S_8 = \tfrac{\sqrt{\left(I_{a_{9}} - I_{a_{8}}\right)^{2} \left(\Delta U_{a_{8}}^{2} + \Delta U_{a_{9}}^{2}\right) + \left(U_{a_{9}} - U_{a_{8}}\right)^{2} \left(\Delta I_{a_{8}}^{2} + \Delta I_{a_{9}}^{2}\right)}}{\left(U_{a_{9}} - U_{a_{8}}\right)^{2}} = \\=
+	\tfrac{\sqrt{\left(0,14  \text{мА}^{2} + 0,17  \text{мА}^{2}\right)   \left(18,0  \text{В} - 16,0  \text{В}\right)^{2} + \left(0,38  \text{В}^{2} + 0,39  \text{В}^{2}\right)   \left(73,52  \text{мА} - 62,4  \text{мА}\right)^{2}}}{\left(18,0  \text{В} - 16,0  \text{В}\right)^{2}} = 1,52  \mathrm{ \frac{\text{мА}}{\text{В}} }
+\end{multline*}
+\vspace{-2em}
+\begin{multline*}
+	\Delta S_9 = \tfrac{\sqrt{\left(I_{a_{10}} - I_{a_{9}}\right)^{2} \left(\Delta U_{a_{10}}^{2} + \Delta U_{a_{9}}^{2}\right) + \left(U_{a_{10}} - U_{a_{9}}\right)^{2} \left(\Delta I_{a_{10}}^{2} + \Delta I_{a_{9}}^{2}\right)}}{\left(U_{a_{10}} - U_{a_{9}}\right)^{2}} = \\=
+	\tfrac{\sqrt{\left(0,17  \text{мА}^{2} + 0,19  \text{мА}^{2}\right)   \left(20,0  \text{В} - 18,0  \text{В}\right)^{2} + \left(0,39  \text{В}^{2} + 0,4  \text{В}^{2}\right)   \left(86,31  \text{мА} - 73,52  \text{мА}\right)^{2}}}{\left(20,0  \text{В} - 18,0  \text{В}\right)^{2}} = 1,79  \mathrm{ \frac{\text{мА}}{\text{В}} }
+\end{multline*}
+}
+
+\appendixsection{Вычисление параметра $g$} \label{app:5}
+\begin{multline*}
+	g = \tfrac{I_{a_{1}} U_{a_{1}}^{1.5} + ... + I_{a_{10}} U_{a_{10}}^{1.5}}{U_{a_{1}}^{3} + ... + U_{a_{10}}^{3}} =\\=
+	\tfrac{10,0 \, \text{В}^{1,5} \times 32,4 \, \text{мА} + 10,16 \, \text{мА} \times 4,0 \, \text{В}^{1,5} + 12,0 \, \text{В}^{1,5} \times 40,9 \, \text{мА} + 14,0 \, \text{В}^{1,5} \times 49,94 \, \text{мА}}{10,0 \, \text{В}^{3} + 12,0 \, \text{В}^{3} + 14,0 \, \text{В}^{3} + 16,0 \, \text{В}^{3} + 18,0 \, \text{В}^{3} + 2,0 \, \text{В}^{3} + 20,0 \, \text{В}^{3} + 4,0 \, \text{В}^{3} + 6,0 \, \text{В}^{3} + 8,0 \, \text{В}^{3}} +\\+ 
+	\tfrac{16,0 \, \text{В}^{1,5} \times 62,4 \, \text{мА} + 16,88 \, \text{мА} \times 6,0 \, \text{В}^{1,5} + 18,0 \, \text{В}^{1,5} \times 73,52 \, \text{мА}}{10,0 \, \text{В}^{3} + 12,0 \, \text{В}^{3} + 14,0 \, \text{В}^{3} + 16,0 \, \text{В}^{3} + 18,0 \, \text{В}^{3} + 2,0 \, \text{В}^{3} + 20,0 \, \text{В}^{3} + 4,0 \, \text{В}^{3} + 6,0 \, \text{В}^{3} + 8,0 \, \text{В}^{3}} +\\+
+	\tfrac{2,0 \, \text{В}^{1,5} \times 3,78 \, \text{мА} + 20,0 \, \text{В}^{1,5} \times 86,31 \, \text{мА} + 24,84 \, \text{мА} \times 8,0 \, \text{В}^{1,5}}{10,0 \, \text{В}^{3} + 12,0 \, \text{В}^{3} + 14,0 \, \text{В}^{3} + 16,0 \, \text{В}^{3} + 18,0 \, \text{В}^{3} + 2,0 \, \text{В}^{3} + 20,0 \, \text{В}^{3} + 4,0 \, \text{В}^{3} + 6,0 \, \text{В}^{3} + 8,0 \, \text{В}^{3}}=0,97 \, \mathrm{ \tfrac{\text{мА}}{\text{В}^{\frac{3}{2}}} }
+\end{multline*}
