--- a/source/theory.tex
+++ b/source/theory.tex
@@ -12,7 +12,7 @@
 	P_a = U_a I_a
 \end{equation}
 
-Уравнение $P_{a_{max}} = U_a I_a = const$ на плоскости $U_a$, $I_a$ изображается гиперболой, асимптотами которой являются координатные оси. На рис.2 эта кривая отмечена индексом "1". Чтобы лампа не вышла из строя, всегда надо следить за тем, чтобы при работе с ней не превышать максимально допустимой мощности, рассеиваемой анодом, т.е. работать только в области $P_a < P_{a_{max}}$. Для каждого типа ламп величина $P_{a_{max}}$ определяется конструкцией электродов и их геометрическими размерами. У очень мощных ламп для повышения этой мощности приходится применять меры принудительного охлаждения анода (водяное и воздушное охлаждение).
+Уравнение $P_{a}^{max} = U_a I_a = const$ на плоскости $U_a$, $I_a$ изображается гиперболой, асимптотами которой являются координатные оси. На рис.2 эта кривая отмечена индексом "1". Чтобы лампа не вышла из строя, всегда надо следить за тем, чтобы при работе с ней не превышать максимально допустимой мощности, рассеиваемой анодом, т.е. работать только в области $P_a < P_{a}^{max}$. Для каждого типа ламп величина $P_{a}^{max}$ определяется конструкцией электродов и их геометрическими размерами. У очень мощных ламп для повышения этой мощности приходится применять меры принудительного охлаждения анода (водяное и воздушное охлаждение).
 
 Функция, выражающая зависимость анодного тока диода от величины напряжения накала $I_a = f(U_n)$, называется температурной характеристикой диода. По ней можно судить об эмиссионной способности катода, о возникновении и исчезновении пространственного заряда между катодом и анодом лампы. Для каждого типа ламп существует нормальное напряжение накала, величину которого нельзя превышать.
 
@@ -53,7 +53,7 @@
 
 Из характеристик прибор мы знаем, что $U_\text{макс} = 299 \text{ В}$, поэтому:
 \begin{align} \label{eq:error:1.2}
-	\boxed{\Delta  U_\text{приб} = 0,005U + \frac{299}{100} \text{ В}}
+	\boxed{\Delta  U_\text{приб} = 0,005U + \frac{299}{1000} \text{ В}}
 \end{align}
 
 \subsubsection{Приборная погрешность GDM-8245 при измерении постоянного тока}
