--- a/code/fab.ipynb
+++ b/code/fab.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 7,
    "id": "efca849a",
    "metadata": {},
    "outputs": [],
@@ -836,8 +836,170 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 11,
    "id": "e5963013",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "[[0.0, 0.13],\n",
+       " [10.0, 4.67],\n",
+       " [20.0, 6.01],\n",
+       " [30.0, 7.5],\n",
+       " [40.0, 8.97],\n",
+       " [50.0, 10.47],\n",
+       " [60.0, 12.0],\n",
+       " [70.0, 13.59],\n",
+       " [80.0, 15.2],\n",
+       " [90.0, 16.88],\n",
+       " [100.0, 18.57],\n",
+       " [110.0, 20.31]]"
+      ]
+     },
+     "execution_count": 11,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "s = r\"\"\"0\t0.13\n",
+    "10\t4.67\n",
+    "20\t6.01\n",
+    "30\t7.50\n",
+    "40\t8.97\n",
+    "50\t10.47\n",
+    "60\t12.00\n",
+    "70\t13.59\n",
+    "80\t15.20\n",
+    "90\t16.88\n",
+    "100\t18.57\n",
+    "110\t20.31\"\"\"\n",
+    "\n",
+    "data = list(map(lambda x: list(map(float,x.split('\\t'))), s.split('\\n')))\n",
+    "data"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 12,
+   "id": "0c1747f0",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "(0.0, 0.13) (10.0, 4.67) (20.0, 6.01) (30.0, 7.5) (40.0, 8.97) (50.0, 10.47) (60.0, 12.0) (70.0, 13.59) (80.0, 15.2) (90.0, 16.88) (100.0, 18.57) (110.0, 20.31) "
+     ]
+    }
+   ],
+   "source": [
+    "for i in data:\n",
+    "    print(tuple(i), end=' ')"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 16,
+   "id": "906d02da",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "_nu = [10, 20, 40, 50, 70, 90, 12, 14, 18, 23, 27, 50, 60, 70, 80, 90]\n",
+    "_k = [2] + [3] * 5 + [4] * 10\n",
+    "\n",
+    "_k = [10**i for i in _k]\n",
+    "\n",
+    "list_nu = []\n",
+    "list_k = []\n",
+    "\n",
+    "for index, (nu, k) in enumerate(zip(_nu, _k)):\n",
+    "    list_nu.append(\n",
+    "        fb.Values(\n",
+    "            name=fr\"\\nu_\\text{{уст {index+1}}}\",\n",
+    "            values=nu,\n",
+    "            delta=0,\n",
+    "            unit=r'\\text{Гц}',\n",
+    "            roundoff=0,\n",
+    "            rounded=True\n",
+    "        )\n",
+    "    )\n",
+    "    \n",
+    "    list_k.append(\n",
+    "        fb.Values(\n",
+    "            name=fr\"k_\\text{{пр {index+1}}}\",\n",
+    "            values=k,\n",
+    "            delta=0,\n",
+    "            unit=r'',\n",
+    "            roundoff=0,\n",
+    "            rounded=True\n",
+    "        )\n",
+    "    )"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 17,
+   "id": "b8666a6c",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "format_md = r\"$$ {} $$\"\n",
+    "format_tex = r\"\\[ {} \\]\"\n",
+    "\n",
+    "def printmd(string) -> None:\n",
+    "    print(format_md.format(string))\n",
+    "\n",
+    "def printex(string) -> None:\n",
+    "    print(format_tex.format(string))"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 18,
+   "id": "8e51e272",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "\\[ \\Delta \\nu_{1} = k_\\text{пр 1} \\left(\\frac{\\nu_\\text{уст 1}}{50} + \\frac{3}{10}\\right) = 100 \\,  \\times \\left(\\frac{10 \\, \\text{Гц}}{50} + \\frac{3}{10}\\right) = 50 \\, \\mathrm{ \\text{кГц} } \\]\n",
+      "\\[ \\Delta \\nu_{2} = k_\\text{пр 2} \\left(\\frac{\\nu_\\text{уст 2}}{50} + \\frac{3}{10}\\right) = 1000 \\,  \\times \\left(\\frac{20 \\, \\text{Гц}}{50} + \\frac{3}{10}\\right) = 700 \\, \\mathrm{ \\text{кГц} } \\]\n",
+      "\\[ \\Delta \\nu_{3} = k_\\text{пр 3} \\left(\\frac{\\nu_\\text{уст 3}}{50} + \\frac{3}{10}\\right) = 1000 \\,  \\times \\left(\\frac{40 \\, \\text{Гц}}{50} + \\frac{3}{10}\\right) = 1100 \\, \\mathrm{ \\text{кГц} } \\]\n",
+      "\\[ \\Delta \\nu_{4} = k_\\text{пр 4} \\left(\\frac{\\nu_\\text{уст 4}}{50} + \\frac{3}{10}\\right) = 1000 \\,  \\times \\left(\\frac{50 \\, \\text{Гц}}{50} + \\frac{3}{10}\\right) = 1300 \\, \\mathrm{ \\text{кГц} } \\]\n",
+      "\\[ \\Delta \\nu_{5} = k_\\text{пр 5} \\left(\\frac{\\nu_\\text{уст 5}}{50} + \\frac{3}{10}\\right) = 1000 \\,  \\times \\left(\\frac{70 \\, \\text{Гц}}{50} + \\frac{3}{10}\\right) = 1700 \\, \\mathrm{ \\text{кГц} } \\]\n",
+      "\\[ \\Delta \\nu_{6} = k_\\text{пр 6} \\left(\\frac{\\nu_\\text{уст 6}}{50} + \\frac{3}{10}\\right) = 1000 \\,  \\times \\left(\\frac{90 \\, \\text{Гц}}{50} + \\frac{3}{10}\\right) = 2100 \\, \\mathrm{ \\text{кГц} } \\]\n",
+      "\\[ \\Delta \\nu_{7} = k_\\text{пр 7} \\left(\\frac{\\nu_\\text{уст 7}}{50} + \\frac{3}{10}\\right) = 10000 \\,  \\times \\left(\\frac{12 \\, \\text{Гц}}{50} + \\frac{3}{10}\\right) = 5400 \\, \\mathrm{ \\text{кГц} } \\]\n",
+      "\\[ \\Delta \\nu_{8} = k_\\text{пр 8} \\left(\\frac{\\nu_\\text{уст 8}}{50} + \\frac{3}{10}\\right) = 10000 \\,  \\times \\left(\\frac{14 \\, \\text{Гц}}{50} + \\frac{3}{10}\\right) = 5800 \\, \\mathrm{ \\text{кГц} } \\]\n",
+      "\\[ \\Delta \\nu_{9} = k_\\text{пр 9} \\left(\\frac{\\nu_\\text{уст 9}}{50} + \\frac{3}{10}\\right) = 10000 \\,  \\times \\left(\\frac{18 \\, \\text{Гц}}{50} + \\frac{3}{10}\\right) = 6600 \\, \\mathrm{ \\text{кГц} } \\]\n",
+      "\\[ \\Delta \\nu_{10} = k_\\text{пр 10} \\left(\\frac{\\nu_\\text{уст 10}}{50} + \\frac{3}{10}\\right) = 10000 \\,  \\times \\left(\\frac{23 \\, \\text{Гц}}{50} + \\frac{3}{10}\\right) = 7600 \\, \\mathrm{ \\text{кГц} } \\]\n",
+      "\\[ \\Delta \\nu_{11} = k_\\text{пр 11} \\left(\\frac{\\nu_\\text{уст 11}}{50} + \\frac{3}{10}\\right) = 10000 \\,  \\times \\left(\\frac{27 \\, \\text{Гц}}{50} + \\frac{3}{10}\\right) = 8400 \\, \\mathrm{ \\text{кГц} } \\]\n",
+      "\\[ \\Delta \\nu_{12} = k_\\text{пр 12} \\left(\\frac{\\nu_\\text{уст 12}}{50} + \\frac{3}{10}\\right) = 10000 \\,  \\times \\left(\\frac{50 \\, \\text{Гц}}{50} + \\frac{3}{10}\\right) = 13000 \\, \\mathrm{ \\text{кГц} } \\]\n",
+      "\\[ \\Delta \\nu_{13} = k_\\text{пр 13} \\left(\\frac{\\nu_\\text{уст 13}}{50} + \\frac{3}{10}\\right) = 10000 \\,  \\times \\left(\\frac{60 \\, \\text{Гц}}{50} + \\frac{3}{10}\\right) = 15000 \\, \\mathrm{ \\text{кГц} } \\]\n",
+      "\\[ \\Delta \\nu_{14} = k_\\text{пр 14} \\left(\\frac{\\nu_\\text{уст 14}}{50} + \\frac{3}{10}\\right) = 10000 \\,  \\times \\left(\\frac{70 \\, \\text{Гц}}{50} + \\frac{3}{10}\\right) = 17000 \\, \\mathrm{ \\text{кГц} } \\]\n",
+      "\\[ \\Delta \\nu_{15} = k_\\text{пр 15} \\left(\\frac{\\nu_\\text{уст 15}}{50} + \\frac{3}{10}\\right) = 10000 \\,  \\times \\left(\\frac{80 \\, \\text{Гц}}{50} + \\frac{3}{10}\\right) = 19000 \\, \\mathrm{ \\text{кГц} } \\]\n",
+      "\\[ \\Delta \\nu_{16} = k_\\text{пр 16} \\left(\\frac{\\nu_\\text{уст 16}}{50} + \\frac{3}{10}\\right) = 10000 \\,  \\times \\left(\\frac{90 \\, \\text{Гц}}{50} + \\frac{3}{10}\\right) = 21000 \\, \\mathrm{ \\text{кГц} } \\]\n"
+     ]
+    }
+   ],
+   "source": [
+    "for index, (nu, k) in enumerate(zip(list_nu, list_k)):\n",
+    "    K = fb.Formula(\n",
+    "        (2 * nu + 30) / 100 * k,\n",
+    "        data=[nu, k],\n",
+    "        unit=r'\\text{кГц}',\n",
+    "        name=fr\"\\Delta \\nu_{{{index+1}}}\", roundoff=0, rounded=False\n",
+    "    )\n",
+    "    printex(K.latex())\n",
+    "    # display(Math(K.latex()))"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "c4faceaf",
    "metadata": {},
    "outputs": [],
    "source": []
