--- a/source/introduction.tex
+++ b/source/introduction.tex
@@ -3,11 +3,15 @@
 1
 
 \subsection*{Задачи} \addcontentsline{toc}{subsection}{Задачи}
-2
+\begin{enumerate}
+	\item Внимательно ознакомиться с экспериментальной установкой;
+	
+\end{enumerate}
 
 \subsection*{Приборы и оборудование} \addcontentsline{toc}{subsection}{Приборы и оборудование}
 
 \begin{enumerate}
 	\item Источник питания постоянного тока Б5-50;
 	\item Вольтметр универсальный GDM-8245;
+	\item Генератор низкочастотных сигналов ГЗ-112;
 \end{enumerate}
