--- a/source/theory.tex
+++ b/source/theory.tex
@@ -20,26 +20,68 @@
 \begin{equation} \label{eq:1}
 	S = \frac{d I_a}{d U_a},
 \end{equation}
-измеряемая обычно в $\tfrac{\text{мА}}{\text{В}}$ или обратная ей величина -- внутренние сопротивление $R_i = \frac{1}{S}$. Т.к. характеристика диода существенно нелинейна, то это дифференциальные параметры зависят от значений $I_a$ и $U_a$, т.е. $S = f(U_a)$. На практике приближенное значение крутизны можно определить по вольтамперной харакетрчитике. Взяв небольшое приращение анодного напряжения $\Delta U_a$ так, чтобы в этих пределах участок анодной характеристики можно считать линейным, по характеристике определим приращение тока $\Delta I_a$. И тогда
+измеряемая обычно в $\tfrac{\text{мА}}{\text{В}}$ или обратная ей величина -- внутренние сопротивление $R_i = \frac{1}{S}$. Т.к. характеристика диода существенно нелинейна, то это дифференциальные параметры зависят от значений $I_a$ и $U_a$, т.е. $S = f(U_a)$. На практике приближенное значение крутизны можно определить по вольт-амперной характеристике. Взяв небольшое приращение анодного напряжения $\Delta U_a$ так, чтобы в этих пределах участок анодной характеристики можно считать линейным, по характеристике определим приращение тока $\Delta I_a$. И тогда
 \begin{equation} \label{eq:2}
 	S \approx \frac{\Delta I_a}{\Delta U_a}
 \end{equation}
+
+\subsection{Вывод закона 3/2 Ленгмюра}
+
+Определим зависимость анодного тока от анодного напряжения в диоде, образованном двумя плоскими, безграничными, параллельными друг другу пластинами. В этом случае можно пренебречь краевым эффектом и считать поле между анодом и катодом однородным. Примем следующие допущения. Пусть у поверхности катода ($x = 0$) $U_k = 0$ и начальная скорость электронов $u_0 = 0$.
+
+Если предположить, что электроды вакуумной трубки плоские, а температура катода постоянная, то потенциал электрического поля будет зависеть только от одной координаты x, направленной вдоль вакуумной трубки от катода к аноду.
+
+Используем одно из уравнений Максвелла в дифференциальной форме:
+\[\text{div} E = \frac{\rho}{\Epsilon_0},\]
+где $\rho$ -- объёмная плотность заряда. Спроецируем это уравнение на ось $x$:
+\begin{equation} \label{eq:4}
+	\frac{\partial\ E}{\partial\ x} = - \frac{1}{\Epsilon_0} en
+\end{equation}
+
+Знак минус учитывает, что эмитируемые электроны имеют отрицательный заряд, $\Epsilon_0$ -- электрическая постоянная, $n$ -- концентрация электронов, $E$ --  напряженность электрического поля.
+
+Работа по перемещению единичного точечного положительного заряда из одной точки поля в другую вдоль оси $x$ при условии, что точки расположены бесконечно близко друг к другу \(x_2 - x_1 = dx\), равна $E_x dx$. Та же работа равна \(\phi_1 - \phi_2 = -dU\). Приравняв оба выражения,
+можем записать:
+\begin{equation} \label{eq:5}
+	E_x = - \frac{d U}{d x}
+\end{equation}
+
+Выразим напряженность $E$ через потенциал $U$, с помощью формулы \cref{eq:5}. Заряд можно представить как количество элементарных зарядов (электронов) или заряд электрона на концентрацию в объеме:
+\begin{equation} \label{eq:6}
+	q = eN = enV
+\end{equation}
+
+С другой стороны объемная плотность заряда равна:
+\[\rho = \frac{d q}{dV} = \frac{d}{dV}enV = en\]
+Тогда получаем, что объемная плотность тока равна:
+\begin{equation} \label{eq:7}
+	j = \rho u = enu
+\end{equation}
+
+Концентрацию выразим через объемную плотность тока, а скорость электронов -- из закона сохранения энергии: $mu^2/2 = eU$:
+\begin{gather}
+	\label{eq:8} n = \frac{j}{eu} \\
+	\label{eq:9} u = \sqrt{\frac{2eU}{m}}
+\end{gather}
+
+Тогда уравнение \cref{eq:4} с учетом \cref{eq:5,eq:8,eq:9} принимает вид:
+
 \subsection{Обработка и построение графиков}
-\subsubsection{Функция теоретического графика крутизны $S$}
+\subsubsection{Аппроксимация теоретического графика крутизны $S$}
 
 Из формулы закона трех вторых мы имеем {\it степенную зависимость} данных. Для построения теоретического графика заменим переменные тока и напряжения на оси $x$ ($x = U_a$) и $y = I_a$:
 \begin{equation} \label{eq:51}
-	y = gx^{\tfrc{3}{2}}
+	y = Bx^{\tfrc{3}{2}}
 \end{equation}
 
 Будем использовать метод наименьших квадратов для получения значения переменной $g$ (первеанс).
-\[S = \sum_{i=1}^n \left(gx_i^{\frac{3}{2}} - y_i\right)^2 \qquad S \to min\]
+\[S = \sum_{i=1}^n \left(Bx_i^{\frac{3}{2}} - y_i\right)^2 \qquad S \to min\]
 
 Для нахождения минимума функции суммы необходимо вычислить ее частную производную по $g$ и приравнять к нулю.
-\[\frac{\partial S}{\partial g} = \sum_{i=1}^n 2\left(gx_i^{\frac{3}{2}} - y_i\right)x_i^{\frac{3}{2}} = 2 \sum_{i=1}^n \left(g x_i^3 - y_i x_i^{\frac{3}{2}}\right) \qquad \frac{\partial S}{\partial g} = 0\]
-\[g \sum_{i=1}^n x_i^3 = \sum_{i=1}^n y_i x_i^{\frac{3}{2}}\]
+\[\frac{\partial S}{\partial B} = \sum_{i=1}^n 2\left(Bx_i^{\frac{3}{2}} - y_i\right)x_i^{\frac{3}{2}} = 2 \sum_{i=1}^n \left(B x_i^3 - y_i x_i^{\frac{3}{2}}\right) \qquad \frac{\partial S}{\partial B} = 0\]
+\[B \sum_{i=1}^n x_i^3 = \sum_{i=1}^n y_i x_i^{\frac{3}{2}}\]
 \begin{equation} \label{eq:52}
-	\boxed{g = \frac{\sum_{i=1}^n y_i x_i^{\frac{3}{2}}}{\sum_{i=1}^n x_i^3}}
+	\boxed{B = \frac{\sum_{i=1}^n y_i x_i^{\frac{3}{2}}}{\sum_{i=1}^n x_i^3}}
 \end{equation}
 
 \subsection{Вычисление погрешностей}
@@ -74,3 +116,25 @@
 \begin{multline} \label{eq:error:3.2}
 	\Delta S =\\= \sqrt{\frac{\Delta I_{a_1}^2}{(U_{a_2} - U_{a_1})^2} + \frac{\Delta I_{a_2}^2}{(U_{a_2} - U_{a_1})^2} + \frac{(I_{a_2} - I_{a_1})^2 }{(U_{a_2} - U_{a_1})^4} \Delta U_{a_1}^2 + \frac{(I_{a_2} - I_{a_1})^2 }{(U_{a_2} - U_{a_1})^4} \Delta U_{a_2}^2} = \\ = \boxed{\frac{\sqrt{(\Delta I_{a_1}^2 + \Delta I_{a_2}^2)(U_{a_2} - U_{a_1})^2 + (\Delta U_{a_1}^2 + \Delta U_{a_2}^2)(I_{a_2} - I_{a_1})^2}}{(U_{a_2} - U_{a_1})^2}}
 \end{multline}
+
+\subsubsection{Приборная погрешность генератора низкочастотных сигналов ГЗ-112}
+
+Относительная приборная погрешность ГЗ-112 при создании сигнала $\nu$:
+\begin{align} \label{eq:error:4.1}
+	\Delta \nu_\text{пр} = \pm (2 + \frac{30}{\nu_\text{уст}})\%
+\end{align}
+где $\nu_\text{уст}$ -- значение, установленное на шкале регулятора частоты. Распишем:
+\begin{align} \label{eq:error:4.2}
+	\boxed{\Delta \nu_\text{пр} = \pm \left(\frac{2\,\nu_\text{уст} + 30}{100} k\right)}
+\end{align}
+где $k$ -- значение множителя на генераторе.
+
+\subsubsection{Вычисление косвенной погрешности коэффициента K}
+Выведем формулу косвенной погрешности крутизны из формулы \cref{eq:pr:1}:
+\[K = \frac{2 U_\text{вых}}{2 U_\text{вх}}\]
+\begin{equation} \label{eq:error:5.1}
+	\Delta K = \sqrt{\left( \frac{\partial K}{\partial 2 U_\text{вых}} \Delta 2U_\text{вых} \right)^2 + \left(\frac{\partial K}{\partial 2U_\text{вх}} \Delta 2U_\text{вх}\right)^2}
+\end{equation}
+\begin{align} \label{eq:error:5.2}
+	\Delta K = \sqrt{\frac{\Delta (2U_\text{вых})^2}{(2U_\text{вх})^2} + \frac{(2U_\text{вых})^2 \Delta (2U_\text{вх})^2}{(2U_\text{вх})^4}}
+\end{align}
