--- a/source/appendix.tex
+++ b/source/appendix.tex
@@ -15,84 +15,120 @@
 
 \appendixsection{Вычисление погрешности постоянного тока $I_a$} \label{app:2}
 {\small
-\[ \Delta I_{\text{приб}_{ 1 }} = 0,002 I_{a_{1}} + 0,02 = 0,002 \times 3,78 \, \text{мА} + 0,02 = 0,03 \, \mathrm{ \text{мА} } \]
-\[ \Delta I_{\text{приб}_{ 2 }} = 0,002 I_{a_{2}} + 0,02 = 0,002 \times 10,16 \, \text{мА} + 0,02 = 0,04 \, \mathrm{ \text{мА} } \]
-\[ \Delta I_{\text{приб}_{ 3 }} = 0,002 I_{a_{3}} + 0,02 = 0,002 \times 16,88 \, \text{мА} + 0,02 = 0,05 \, \mathrm{ \text{мА} } \]
-\[ \Delta I_{\text{приб}_{ 4 }} = 0,002 I_{a_{4}} + 0,02 = 0,002 \times 24,84 \, \text{мА} + 0,02 = 0,07 \, \mathrm{ \text{мА} } \]
-\[ \Delta I_{\text{приб}_{ 5 }} = 0,002 I_{a_{5}} + 0,02 = 0,002 \times 32,4 \, \text{мА} + 0,02 = 0,08 \, \mathrm{ \text{мА} } \]
-\[ \Delta I_{\text{приб}_{ 6 }} = 0,002 I_{a_{6}} + 0,02 = 0,002 \times 40,9 \, \text{мА} + 0,02 = 0,10 \, \mathrm{ \text{мА} } \]
-\[ \Delta I_{\text{приб}_{ 7 }} = 0,002 I_{a_{7}} + 0,02 = 0,002 \times 49,94 \, \text{мА} + 0,02 = 0,12 \, \mathrm{ \text{мА} } \]
-\[ \Delta I_{\text{приб}_{ 8 }} = 0,002 I_{a_{8}} + 0,02 = 0,002 \times 62,4 \, \text{мА} + 0,02 = 0,14 \, \mathrm{ \text{мА} } \]
-\[ \Delta I_{\text{приб}_{ 9 }} = 0,002 I_{a_{9}} + 0,02 = 0,002 \times 73,52 \, \text{мА} + 0,02 = 0,17 \, \mathrm{ \text{мА} } \]
-\[ \Delta I_{\text{приб}_{ 10 }} = 0,002 I_{a_{10}} + 0,02 = 0,002 \times 86,31 \, \text{мА} + 0,02 = 0,19 \, \mathrm{ \text{мА} } \]
+\[ \Delta I_{\text{пр}_{ 1 }} = 0,002 I_{a_{1}} + 0,02 = 0,002 \times 3,78 \, \text{мА} + 0,02 = 0,03 \, \mathrm{ \text{мА} } \]
+\[ \Delta I_{\text{пр}_{ 2 }} = 0,002 I_{a_{2}} + 0,02 = 0,002 \times 10,16 \, \text{мА} + 0,02 = 0,04 \, \mathrm{ \text{мА} } \]
+\[ \Delta I_{\text{пр}_{ 3 }} = 0,002 I_{a_{3}} + 0,02 = 0,002 \times 16,88 \, \text{мА} + 0,02 = 0,05 \, \mathrm{ \text{мА} } \]
+\[ \Delta I_{\text{пр}_{ 4 }} = 0,002 I_{a_{4}} + 0,02 = 0,002 \times 24,84 \, \text{мА} + 0,02 = 0,07 \, \mathrm{ \text{мА} } \]
+\[ \Delta I_{\text{пр}_{ 5 }} = 0,002 I_{a_{5}} + 0,02 = 0,002 \times 32,4 \, \text{мА} + 0,02 = 0,08 \, \mathrm{ \text{мА} } \]
+\[ \Delta I_{\text{пр}_{ 6 }} = 0,002 I_{a_{6}} + 0,02 = 0,002 \times 40,9 \, \text{мА} + 0,02 = 0,10 \, \mathrm{ \text{мА} } \]
+\[ \Delta I_{\text{пр}_{ 7 }} = 0,002 I_{a_{7}} + 0,02 = 0,002 \times 49,94 \, \text{мА} + 0,02 = 0,12 \, \mathrm{ \text{мА} } \]
+\[ \Delta I_{\text{пр}_{ 8 }} = 0,002 I_{a_{8}} + 0,02 = 0,002 \times 62,4 \, \text{мА} + 0,02 = 0,14 \, \mathrm{ \text{мА} } \]
+\[ \Delta I_{\text{пр}_{ 9 }} = 0,002 I_{a_{9}} + 0,02 = 0,002 \times 73,52 \, \text{мА} + 0,02 = 0,17 \, \mathrm{ \text{мА} } \]
+\[ \Delta I_{\text{пр}_{ 10 }} = 0,002 I_{a_{10}} + 0,02 = 0,002 \times 86,31 \, \text{мА} + 0,02 = 0,19 \, \mathrm{ \text{мА} } \]
 }
 
 \appendixsection{Вычисление погрешности  напряжения $U_a$} \label{app:3}
 {\small
-\[ \Delta U_{\text{приб}_{ 1 }} = 0,005 U_{a_{1}} + 0,299 = 0,005 \times 2 \, \text{В} + 0,299 = 0,31 \, \mathrm{ \text{В} } \]
-\[ \Delta U_{\text{приб}_{ 2 }} = 0,005 U_{a_{2}} + 0,299 = 0,005 \times 4 \, \text{В} + 0,299 = 0,32 \, \mathrm{ \text{В} } \]
-\[ \Delta U_{\text{приб}_{ 3 }} = 0,005 U_{a_{3}} + 0,299 = 0,005 \times 6 \, \text{В} + 0,299 = 0,33 \, \mathrm{ \text{В} } \]
-\[ \Delta U_{\text{приб}_{ 4 }} = 0,005 U_{a_{4}} + 0,299 = 0,005 \times 8 \, \text{В} + 0,299 = 0,34 \, \mathrm{ \text{В} } \]
-\[ \Delta U_{\text{приб}_{ 5 }} = 0,005 U_{a_{5}} + 0,299 = 0,005 \times 10 \, \text{В} + 0,299 = 0,35 \, \mathrm{ \text{В} } \]
-\[ \Delta U_{\text{приб}_{ 6 }} = 0,005 U_{a_{6}} + 0,299 = 0,005 \times 12 \, \text{В} + 0,299 = 0,36 \, \mathrm{ \text{В} } \]
-\[ \Delta U_{\text{приб}_{ 7 }} = 0,005 U_{a_{7}} + 0,299 = 0,005 \times 14 \, \text{В} + 0,299 = 0,37 \, \mathrm{ \text{В} } \]
-\[ \Delta U_{\text{приб}_{ 8 }} = 0,005 U_{a_{8}} + 0,299 = 0,005 \times 16 \, \text{В} + 0,299 = 0,38 \, \mathrm{ \text{В} } \]
-\[ \Delta U_{\text{приб}_{ 9 }} = 0,005 U_{a_{9}} + 0,299 = 0,005 \times 18 \, \text{В} + 0,299 = 0,39 \, \mathrm{ \text{В} } \]
-\[ \Delta U_{\text{приб}_{ 10 }} = 0,005 U_{a_{10}} + 0,299 = 0,005 \times 20 \, \text{В} + 0,299 = 0,40 \, \mathrm{ \text{В} } \]
+\[ \Delta U_{\text{пр}_{ 1 }} = 0,005 U_{a_{1}} + 0,299 = 0,005 \times 2 \, \text{В} + 0,299 = 0,31 \, \mathrm{ \text{В} } \]
+\[ \Delta U_{\text{пр}_{ 2 }} = 0,005 U_{a_{2}} + 0,299 = 0,005 \times 4 \, \text{В} + 0,299 = 0,32 \, \mathrm{ \text{В} } \]
+\[ \Delta U_{\text{пр}_{ 3 }} = 0,005 U_{a_{3}} + 0,299 = 0,005 \times 6 \, \text{В} + 0,299 = 0,33 \, \mathrm{ \text{В} } \]
+\[ \Delta U_{\text{пр}_{ 4 }} = 0,005 U_{a_{4}} + 0,299 = 0,005 \times 8 \, \text{В} + 0,299 = 0,34 \, \mathrm{ \text{В} } \]
+\[ \Delta U_{\text{пр}_{ 5 }} = 0,005 U_{a_{5}} + 0,299 = 0,005 \times 10 \, \text{В} + 0,299 = 0,35 \, \mathrm{ \text{В} } \]
+\[ \Delta U_{\text{пр}_{ 6 }} = 0,005 U_{a_{6}} + 0,299 = 0,005 \times 12 \, \text{В} + 0,299 = 0,36 \, \mathrm{ \text{В} } \]
+\[ \Delta U_{\text{пр}_{ 7 }} = 0,005 U_{a_{7}} + 0,299 = 0,005 \times 14 \, \text{В} + 0,299 = 0,37 \, \mathrm{ \text{В} } \]
+\[ \Delta U_{\text{пр}_{ 8 }} = 0,005 U_{a_{8}} + 0,299 = 0,005 \times 16 \, \text{В} + 0,299 = 0,38 \, \mathrm{ \text{В} } \]
+\[ \Delta U_{\text{пр}_{ 9 }} = 0,005 U_{a_{9}} + 0,299 = 0,005 \times 18 \, \text{В} + 0,299 = 0,39 \, \mathrm{ \text{В} } \]
+\[ \Delta U_{\text{пр}_{ 10 }} = 0,005 U_{a_{10}} + 0,299 = 0,005 \times 20 \, \text{В} + 0,299 = 0,40 \, \mathrm{ \text{В} } \]
 }
 
 \appendixsection{Вычисление консвенной погрешности $S$} \label{app:4}
 {\small
+\setlength\belowdisplayskip{-3pt}
 \begin{multline*}
 	\Delta S_1 = \tfrac{\sqrt{\left(I_{a_{2}} - I_{a_{1}}\right)^{2} \left(\Delta U_{a_{1}}^{2} + \Delta U_{a_{2}}^{2}\right) + \left(U_{a_{2}} - U_{a_{1}}\right)^{2} \left(\Delta I_{a_{1}}^{2} + \Delta I_{a_{2}}^{2}\right)}}{\left(U_{a_{2}} - U_{a_{1}}\right)^{2}} = \\ =
 	\tfrac{\sqrt{\left(0,03  \text{мА}^{2} + 0,04  \text{мА}^{2}\right)   \left(4,0  \text{В} - 2,0  \text{В}\right)^{2} + \left(0,31  \text{В}^{2} + 0,32  \text{В}^{2}\right)   \left(10,16  \text{мА} - 3,78  \text{мА}\right)^{2}}}{\left(4,0  \text{В} - 2,0  \text{В}\right)^{2}} = 0,71  \mathrm{ \frac{\text{мА}}{\text{В}} }
 \end{multline*}
-\vspace{-2em}
 \begin{multline*}
 	\Delta S_2 = \tfrac{\sqrt{\left(I_{a_{3}} - I_{a_{2}}\right)^{2} \left(\Delta U_{a_{2}}^{2} + \Delta U_{a_{3}}^{2}\right) + \left(U_{a_{3}} - U_{a_{2}}\right)^{2} \left(\Delta I_{a_{2}}^{2} + \Delta I_{a_{3}}^{2}\right)}}{\left(U_{a_{3}} - U_{a_{2}}\right)^{2}} = \\=
 	\tfrac{\sqrt{\left(0,04  \text{мА}^{2} + 0,05  \text{мА}^{2}\right)   \left(6,0  \text{В} - 4,0  \text{В}\right)^{2} + \left(0,32  \text{В}^{2} + 0,33  \text{В}^{2}\right)   \left(16,88  \text{мА} - 10,16  \text{мА}\right)^{2}}}{\left(6,0  \text{В} - 4,0  \text{В}\right)^{2}} = 0,77  \mathrm{ \frac{\text{мА}}{\text{В}} }
 \end{multline*}
-\vspace{-2em}
 \begin{multline*}
 	\Delta S_3 = \tfrac{\sqrt{\left(I_{a_{4}} - I_{a_{3}}\right)^{2} \left(\Delta U_{a_{3}}^{2} + \Delta U_{a_{4}}^{2}\right) + \left(U_{a_{4}} - U_{a_{3}}\right)^{2} \left(\Delta I_{a_{3}}^{2} + \Delta I_{a_{4}}^{2}\right)}}{\left(U_{a_{4}} - U_{a_{3}}\right)^{2}} = \\=
 	\tfrac{\sqrt{\left(0,05  \text{мА}^{2} + 0,07  \text{мА}^{2}\right)   \left(8,0  \text{В} - 6,0  \text{В}\right)^{2} + \left(0,33  \text{В}^{2} + 0,34  \text{В}^{2}\right)   \left(24,84  \text{мА} - 16,88  \text{мА}\right)^{2}}}{\left(8,0  \text{В} - 6,0  \text{В}\right)^{2}} = 0,94  \mathrm{ \frac{\text{мА}}{\text{В}} }
 \end{multline*}
-\vspace{-2em}
 \begin{multline*}
 	\Delta S_4 = \tfrac{\sqrt{\left(I_{a_{5}} - I_{a_{4}}\right)^{2} \left(\Delta U_{a_{4}}^{2} + \Delta U_{a_{5}}^{2}\right) + \left(U_{a_{5}} - U_{a_{4}}\right)^{2} \left(\Delta I_{a_{4}}^{2} + \Delta I_{a_{5}}^{2}\right)}}{\left(U_{a_{5}} - U_{a_{4}}\right)^{2}} = \\=
 	\tfrac{\sqrt{\left(0,07  \text{мА}^{2} + 0,08  \text{мА}^{2}\right)   \left(10,0  \text{В} - 8,0  \text{В}\right)^{2} + \left(0,34  \text{В}^{2} + 0,35  \text{В}^{2}\right)   \left(32,4  \text{мА} - 24,84  \text{мА}\right)^{2}}}{\left(10,0  \text{В} - 8,0  \text{В}\right)^{2}} = 0,92  \mathrm{ \frac{\text{мА}}{\text{В}} }
 \end{multline*}
-\vspace{-2em}
 \begin{multline*}
 	\Delta S_5 = \tfrac{\sqrt{\left(I_{a_{6}} - I_{a_{5}}\right)^{2} \left(\Delta U_{a_{5}}^{2} + \Delta U_{a_{6}}^{2}\right) + \left(U_{a_{6}} - U_{a_{5}}\right)^{2} \left(\Delta I_{a_{5}}^{2} + \Delta I_{a_{6}}^{2}\right)}}{\left(U_{a_{6}} - U_{a_{5}}\right)^{2}} = \\=
 	\tfrac{\sqrt{\left(0,08  \text{мА}^{2} + 0,1  \text{мА}^{2}\right)   \left(12,0  \text{В} - 10,0  \text{В}\right)^{2} + \left(0,35  \text{В}^{2} + 0,36  \text{В}^{2}\right)   \left(40,9  \text{мА} - 32,4  \text{мА}\right)^{2}}}{\left(12,0  \text{В} - 10,0  \text{В}\right)^{2}} = 1,07  \mathrm{ \frac{\text{мА}}{\text{В}} }
 \end{multline*}
-\vspace{-2em}
 \begin{multline*}
 	\Delta S_6 = \tfrac{\sqrt{\left(I_{a_{7}} - I_{a_{6}}\right)^{2} \left(\Delta U_{a_{6}}^{2} + \Delta U_{a_{7}}^{2}\right) + \left(U_{a_{7}} - U_{a_{6}}\right)^{2} \left(\Delta I_{a_{6}}^{2} + \Delta I_{a_{7}}^{2}\right)}}{\left(U_{a_{7}} - U_{a_{6}}\right)^{2}} = \\=
 	\tfrac{\sqrt{\left(0,1  \text{мА}^{2} + 0,12  \text{мА}^{2}\right)   \left(14,0  \text{В} - 12,0  \text{В}\right)^{2} + \left(0,36  \text{В}^{2} + 0,37  \text{В}^{2}\right)   \left(49,94  \text{мА} - 40,9  \text{мА}\right)^{2}}}{\left(14,0  \text{В} - 12,0  \text{В}\right)^{2}} = 1,17  \mathrm{ \frac{\text{мА}}{\text{В}} }
 \end{multline*}
-\vspace{-2em}
 \begin{multline*}
 	\Delta S_7 = \tfrac{\sqrt{\left(I_{a_{8}} - I_{a_{7}}\right)^{2} \left(\Delta U_{a_{7}}^{2} + \Delta U_{a_{8}}^{2}\right) + \left(U_{a_{8}} - U_{a_{7}}\right)^{2} \left(\Delta I_{a_{7}}^{2} + \Delta I_{a_{8}}^{2}\right)}}{\left(U_{a_{8}} - U_{a_{7}}\right)^{2}} = \\=
 	\tfrac{\sqrt{\left(0,12  \text{мА}^{2} + 0,14  \text{мА}^{2}\right)   \left(16,0  \text{В} - 14,0  \text{В}\right)^{2} + \left(0,37  \text{В}^{2} + 0,38  \text{В}^{2}\right)   \left(62,4  \text{мА} - 49,94  \text{мА}\right)^{2}}}{\left(16,0  \text{В} - 14,0  \text{В}\right)^{2}} = 1,65  \mathrm{ \frac{\text{мА}}{\text{В}} }
 \end{multline*}
-\vspace{-2em}
 \begin{multline*}
 	\Delta S_8 = \tfrac{\sqrt{\left(I_{a_{9}} - I_{a_{8}}\right)^{2} \left(\Delta U_{a_{8}}^{2} + \Delta U_{a_{9}}^{2}\right) + \left(U_{a_{9}} - U_{a_{8}}\right)^{2} \left(\Delta I_{a_{8}}^{2} + \Delta I_{a_{9}}^{2}\right)}}{\left(U_{a_{9}} - U_{a_{8}}\right)^{2}} = \\=
 	\tfrac{\sqrt{\left(0,14  \text{мА}^{2} + 0,17  \text{мА}^{2}\right)   \left(18,0  \text{В} - 16,0  \text{В}\right)^{2} + \left(0,38  \text{В}^{2} + 0,39  \text{В}^{2}\right)   \left(73,52  \text{мА} - 62,4  \text{мА}\right)^{2}}}{\left(18,0  \text{В} - 16,0  \text{В}\right)^{2}} = 1,52  \mathrm{ \frac{\text{мА}}{\text{В}} }
 \end{multline*}
-\vspace{-2em}
 \begin{multline*}
 	\Delta S_9 = \tfrac{\sqrt{\left(I_{a_{10}} - I_{a_{9}}\right)^{2} \left(\Delta U_{a_{10}}^{2} + \Delta U_{a_{9}}^{2}\right) + \left(U_{a_{10}} - U_{a_{9}}\right)^{2} \left(\Delta I_{a_{10}}^{2} + \Delta I_{a_{9}}^{2}\right)}}{\left(U_{a_{10}} - U_{a_{9}}\right)^{2}} = \\=
 	\tfrac{\sqrt{\left(0,17  \text{мА}^{2} + 0,19  \text{мА}^{2}\right)   \left(20,0  \text{В} - 18,0  \text{В}\right)^{2} + \left(0,39  \text{В}^{2} + 0,4  \text{В}^{2}\right)   \left(86,31  \text{мА} - 73,52  \text{мА}\right)^{2}}}{\left(20,0  \text{В} - 18,0  \text{В}\right)^{2}} = 1,79  \mathrm{ \frac{\text{мА}}{\text{В}} }
 \end{multline*}
 }
 
-\appendixsection{Вычисление параметра $g$} \label{app:5}
+\appendixsection{Вычисление параметра B} \label{app:5}
 \begin{multline*}
-	g = \tfrac{I_{a_{1}} U_{a_{1}}^{1.5} + ... + I_{a_{10}} U_{a_{10}}^{1.5}}{U_{a_{1}}^{3} + ... + U_{a_{10}}^{3}} =\\=
-	\tfrac{10,0 \, \text{В}^{1,5} \times 32,4 \, \text{мА} + 10,16 \, \text{мА} \times 4,0 \, \text{В}^{1,5} + 12,0 \, \text{В}^{1,5} \times 40,9 \, \text{мА} + 14,0 \, \text{В}^{1,5} \times 49,94 \, \text{мА}}{10,0 \, \text{В}^{3} + 12,0 \, \text{В}^{3} + 14,0 \, \text{В}^{3} + 16,0 \, \text{В}^{3} + 18,0 \, \text{В}^{3} + 2,0 \, \text{В}^{3} + 20,0 \, \text{В}^{3} + 4,0 \, \text{В}^{3} + 6,0 \, \text{В}^{3} + 8,0 \, \text{В}^{3}} +\\+ 
-	\tfrac{16,0 \, \text{В}^{1,5} \times 62,4 \, \text{мА} + 16,88 \, \text{мА} \times 6,0 \, \text{В}^{1,5} + 18,0 \, \text{В}^{1,5} \times 73,52 \, \text{мА}}{10,0 \, \text{В}^{3} + 12,0 \, \text{В}^{3} + 14,0 \, \text{В}^{3} + 16,0 \, \text{В}^{3} + 18,0 \, \text{В}^{3} + 2,0 \, \text{В}^{3} + 20,0 \, \text{В}^{3} + 4,0 \, \text{В}^{3} + 6,0 \, \text{В}^{3} + 8,0 \, \text{В}^{3}} +\\+
-	\tfrac{2,0 \, \text{В}^{1,5} \times 3,78 \, \text{мА} + 20,0 \, \text{В}^{1,5} \times 86,31 \, \text{мА} + 24,84 \, \text{мА} \times 8,0 \, \text{В}^{1,5}}{10,0 \, \text{В}^{3} + 12,0 \, \text{В}^{3} + 14,0 \, \text{В}^{3} + 16,0 \, \text{В}^{3} + 18,0 \, \text{В}^{3} + 2,0 \, \text{В}^{3} + 20,0 \, \text{В}^{3} + 4,0 \, \text{В}^{3} + 6,0 \, \text{В}^{3} + 8,0 \, \text{В}^{3}}=0,97 \, \mathrm{ \tfrac{\text{мА}}{\text{В}^{\frac{3}{2}}} }
+	B = \tfrac{I_{a_{1}} U_{a_{1}}^{1.5} + ... + I_{a_{10}} U_{a_{10}}^{1.5}}{U_{a_{1}}^{3} + ... + U_{a_{10}}^{3}} =\\= \tfrac{10,2~\mathrm{\text{мА}} \cdot \left(4~\mathrm{\text{В}}\right)^{1,5} + 16,9~\mathrm{\text{мА}} \cdot \left(6~\mathrm{\text{В}}\right)^{1,5} + 24,8~\mathrm{\text{мА}} \cdot \left(8~\mathrm{\text{В}}\right)^{1,5} + 3,8~\mathrm{\text{мА}} \cdot \left(2~\mathrm{\text{В}}\right)^{1,5} + 32,4~\mathrm{\text{мА}} \cdot \left(10~\mathrm{\text{В}}\right)^{1,5}}{\left(10~\mathrm{\text{В}}\right)^{3} + \left(12~\mathrm{\text{В}}\right)^{3} + \left(14~\mathrm{\text{В}}\right)^{3} + \left(16~\mathrm{\text{В}}\right)^{3} + \left(18~\mathrm{\text{В}}\right)^{3} + \left(20~\mathrm{\text{В}}\right)^{3} + \left(2~\mathrm{\text{В}}\right)^{3} + \left(4~\mathrm{\text{В}}\right)^{3} + \left(6~\mathrm{\text{В}}\right)^{3} + \left(8~\mathrm{\text{В}}\right)^{3}} + \\ + \tfrac{ 40,9~\mathrm{\text{мА}} \cdot \left(12~\mathrm{\text{В}}\right)^{1,5} + 49,9~\mathrm{\text{мА}} \cdot \left(14~\mathrm{\text{В}}\right)^{1,5} + 62,4~\mathrm{\text{мА}} \cdot \left(16~\mathrm{\text{В}}\right)^{1,5} + 73,5~\mathrm{\text{мА}} \cdot \left(18~\mathrm{\text{В}}\right)^{1,5}  + 86,3~\mathrm{\text{мА}} \cdot \left(20~\mathrm{\text{В}}\right)^{1,5}}{\left(10~\mathrm{\text{В}}\right)^{3} + \left(12~\mathrm{\text{В}}\right)^{3} + \left(14~\mathrm{\text{В}}\right)^{3} + \left(16~\mathrm{\text{В}}\right)^{3} + \left(18~\mathrm{\text{В}}\right)^{3} + \left(20~\mathrm{\text{В}}\right)^{3} + \left(2~\mathrm{\text{В}}\right)^{3} + \left(4~\mathrm{\text{В}}\right)^{3} + \left(6~\mathrm{\text{В}}\right)^{3} + \left(8~\mathrm{\text{В}}\right)^{3}} =\\= 0,97~\mathrm{\tfrac{\text{мА}}{\text{В}^{3/2}}} 
 \end{multline*}
+\appendixsection{Вычисление коэффициента усиления $K$} \label{app:6}
+{\small
+	\begin{multicols}{3}
+		\noindent
+		\[ K_{1} = \tfrac{2U_\text{вых\,0}}{2U_\text{вх}} = \tfrac{0,36 \, \text{В}}{0,2 \, \text{В}} = 1,80 \, \mathrm{  } \]
+		\[ K_{2} = \tfrac{2U_\text{вых\,1}}{2U_\text{вх}} = \tfrac{0,352 \, \text{В}}{0,2 \, \text{В}} = 1,76 \, \mathrm{  } \]
+		\[ K_{3} = \tfrac{2U_\text{вых\,2}}{2U_\text{вх}} = \tfrac{0,356 \, \text{В}}{0,2 \, \text{В}} = 1,78 \, \mathrm{  } \]
+		\[ K_{4} = \tfrac{2U_\text{вых\,3}}{2U_\text{вх}} = \tfrac{0,348 \, \text{В}}{0,2 \, \text{В}} = 1,74 \, \mathrm{  } \]
+		\[ K_{5} = \tfrac{2U_\text{вых\,4}}{2U_\text{вх}} = \tfrac{0,352 \, \text{В}}{0,2 \, \text{В}} = 1,76 \, \mathrm{  } \]
+		\[ K_{6} = \tfrac{2U_\text{вых\,5}}{2U_\text{вх}} = \tfrac{0,352 \, \text{В}}{0,2 \, \text{В}} = 1,76 \, \mathrm{  } \]
+		\[ K_{7} = \tfrac{2U_\text{вых\,6}}{2U_\text{вх}} = \tfrac{0,352 \, \text{В}}{0,2 \, \text{В}} = 1,76 \, \mathrm{  } \]
+		\[ K_{8} = \tfrac{2U_\text{вых\,7}}{2U_\text{вх}} = \tfrac{0,352 \, \text{В}}{0,2 \, \text{В}} = 1,76 \, \mathrm{  } \]
+		\[ K_{9} = \tfrac{2U_\text{вых\,8}}{2U_\text{вх}} = \tfrac{0,344 \, \text{В}}{0,2 \, \text{В}} = 1,72 \, \mathrm{  } \]
+		\[ K_{10} = \tfrac{2U_\text{вых\,9}}{2U_\text{вх}} = \tfrac{0,344 \, \text{В}}{0,2 \, \text{В}} = 1,72 \, \mathrm{  } \]
+		\[ K_{11} = \tfrac{2U_\text{вых\,10}}{2U_\text{вх}} = \tfrac{0,336 \, \text{В}}{0,2 \, \text{В}} = 1,68 \, \mathrm{  } \]
+		\[ K_{12} = \tfrac{2U_\text{вых\,11}}{2U_\text{вх}} = \tfrac{0,308 \, \text{В}}{0,2 \, \text{В}} = 1,54 \, \mathrm{  } \]
+		\[ K_{13} = \tfrac{2U_\text{вых\,12}}{2U_\text{вх}} = \tfrac{0,288 \, \text{В}}{0,2 \, \text{В}} = 1,44 \, \mathrm{  } \]
+		\[ K_{14} = \tfrac{2U_\text{вых\,13}}{2U_\text{вх}} = \tfrac{0,272 \, \text{В}}{0,2 \, \text{В}} = 1,36 \, \mathrm{  } \]
+		\[ K_{15} = \tfrac{2U_\text{вых\,14}}{2U_\text{вх}} = \tfrac{0,254 \, \text{В}}{0,2 \, \text{В}} = 1,27 \, \mathrm{  } \]
+		\[ K_{16} = \tfrac{2U_\text{вых\,15}}{2U_\text{вх}} = \tfrac{0,24 \, \text{В}}{0,2 \, \text{В}} = 1,20 \, \mathrm{  } \]
+	\end{multicols}
+}
+
+\appendixsection{Вычисление приборной погрешности сигнала} \label{app:7}
+{\small
+\setlength\belowdisplayskip{0pt}
+\begin{multicols}{2}
+	\noindent
+	\begin{multline*} \Delta \nu_{1} = k_\text{пр 1} \left(\tfrac{\nu_\text{уст 1}}{50} + \tfrac{3}{10}\right) =\\= 10^2  \left(\tfrac{10 \, \text{Гц}}{50} + \tfrac{3}{10}\right) = 0,1 \, \mathrm{ \text{кГц} } \end{multline*}
+	\begin{multline*} \Delta \nu_{2} = k_\text{пр 2} \left(\tfrac{\nu_\text{уст 2}}{50} + \tfrac{3}{10}\right) =\\= 10^3  \left(\tfrac{20 \, \text{Гц}}{50} + \tfrac{3}{10}\right) = 0,7 \, \mathrm{ \text{кГц} } \end{multline*}
+	\begin{multline*} \Delta \nu_{3} = k_\text{пр 3} \left(\tfrac{\nu_\text{уст 3}}{50} + \tfrac{3}{10}\right) =\\= 10^3    \left(\tfrac{40 \, \text{Гц}}{50} + \tfrac{3}{10}\right) = 1,1 \, \mathrm{ \text{кГц} } \end{multline*}
+	\begin{multline*} \Delta \nu_{4} = k_\text{пр 4} \left(\tfrac{\nu_\text{уст 4}}{50} + \tfrac{3}{10}\right) =\\= 10^3    \left(\tfrac{50 \, \text{Гц}}{50} + \tfrac{3}{10}\right) = 1,3 \, \mathrm{ \text{кГц} } \end{multline*}
+	\begin{multline*} \Delta \nu_{5} = k_\text{пр 5} \left(\tfrac{\nu_\text{уст 5}}{50} + \tfrac{3}{10}\right) =\\= 10^3    \left(\tfrac{70 \, \text{Гц}}{50} + \tfrac{3}{10}\right) = 1,7 \, \mathrm{ \text{кГц} } \end{multline*}
+	\begin{multline*} \Delta \nu_{6} = k_\text{пр 6} \left(\tfrac{\nu_\text{уст 6}}{50} + \tfrac{3}{10}\right) =\\= 10^3   \left(\tfrac{90 \, \text{Гц}}{50} + \tfrac{3}{10}\right) = 2,1 \, \mathrm{ \text{кГц} } \end{multline*}
+	\begin{multline*} \Delta \nu_{7} = k_\text{пр 7} \left(\tfrac{\nu_\text{уст 7}}{50} + \tfrac{3}{10}\right) =\\= 10^4   \left(\tfrac{12 \, \text{Гц}}{50} + \tfrac{3}{10}\right) = 5,4 \, \mathrm{ \text{кГц} } \end{multline*}
+	\begin{multline*} \Delta \nu_{8} = k_\text{пр 8} \left(\tfrac{\nu_\text{уст 8}}{50} + \tfrac{3}{10}\right) =\\= 10^4   \left(\tfrac{14 \, \text{Гц}}{50} + \tfrac{3}{10}\right) = 5,8 \, \mathrm{ \text{кГц} } \end{multline*}
+	\begin{multline*} \Delta \nu_{9} = k_\text{пр 9} \left(\tfrac{\nu_\text{уст 9}}{50} + \tfrac{3}{10}\right) =\\= 10^4   \left(\tfrac{18 \, \text{Гц}}{50} + \tfrac{3}{10}\right) = 6,6 \, \mathrm{ \text{кГц} } \end{multline*}
+	\begin{multline*} \Delta \nu_{10} = k_\text{пр 10} \left(\tfrac{\nu_\text{уст 10}}{50} + \tfrac{3}{10}\right) =\\= 10^4   \left(\tfrac{23 \, \text{Гц}}{50} + \tfrac{3}{10}\right) = 7,6 \, \mathrm{ \text{кГц} } \end{multline*}
+	\begin{multline*} \Delta \nu_{11} = k_\text{пр 11} \left(\tfrac{\nu_\text{уст 11}}{50} + \tfrac{3}{10}\right) =\\= 10^4   \left(\tfrac{27 \, \text{Гц}}{50} + \tfrac{3}{10}\right) = 8,4 \, \mathrm{ \text{кГц} } \end{multline*}
+	\begin{multline*} \Delta \nu_{12} = k_\text{пр 12} \left(\tfrac{\nu_\text{уст 12}}{50} + \tfrac{3}{10}\right) =\\= 10^4   \left(\tfrac{50 \, \text{Гц}}{50} + \tfrac{3}{10}\right) = 13,0 \, \mathrm{ \text{кГц} } \end{multline*}
+	\begin{multline*} \Delta \nu_{13} = k_\text{пр 13} \left(\tfrac{\nu_\text{уст 13}}{50} + \tfrac{3}{10}\right) =\\= 10^4   \left(\tfrac{60 \, \text{Гц}}{50} + \tfrac{3}{10}\right) = 15,0 \, \mathrm{ \text{кГц} } \end{multline*}
+	\begin{multline*} \Delta \nu_{14} = k_\text{пр 14} \left(\tfrac{\nu_\text{уст 14}}{50} + \tfrac{3}{10}\right) =\\= 10^4   \left(\tfrac{70 \, \text{Гц}}{50} + \tfrac{3}{10}\right) = 17,0 \, \mathrm{ \text{кГц} } \end{multline*}
+	\begin{multline*} \Delta \nu_{15} = k_\text{пр 15} \left(\tfrac{\nu_\text{уст 15}}{50} + \tfrac{3}{10}\right) =\\= 10^4   \left(\tfrac{80 \, \text{Гц}}{50} + \tfrac{3}{10}\right) = 19,0 \, \mathrm{ \text{кГц} } \end{multline*}
+	\begin{multline*} \Delta \nu_{16} = k_\text{пр 16} \left(\tfrac{\nu_\text{уст 16}}{50} + \tfrac{3}{10}\right) =\\= 10^4  \left(\tfrac{90 \, \text{Гц}}{50} + \tfrac{3}{10}\right) = 21,0 \, \mathrm{ \text{кГц} } \end{multline*}
+\end{multicols}
+}
