Добавление стилевого файла

--- a/source/practice.tex
+++ b/source/practice.tex
@@ -447,3 +447,4 @@ z		\end{axis}
 	\end{subtable}
 \end{table}
  
+Для каждой из характеристик подсчитали коэффициент крутизны $S$ на линейном участке графика.
