Обновлен раздел ВВЕДЕНИЕ
Добавил задачи и цель, обновил оборудование

--- a/source/introduction.tex
+++ b/source/introduction.tex
@@ -1,10 +1,14 @@
 \section{Введение}
 \subsection*{Цель} \addcontentsline{toc}{subsection}{Цель}
-1
+Познакомиться с работой простейших электронных ламп - диода и триода. 
 
 \subsection*{Задачи} \addcontentsline{toc}{subsection}{Задачи}
 \begin{enumerate}
-	\item Внимательно ознакомиться с экспериментальной установкой;
+	\item Снять статическую характеристику диода
+	
+	\item Снять статические характеристики триода 
+	
+	\item Определить коэффициент усиления усилителя
 	
 \end{enumerate}
 
@@ -14,4 +18,5 @@
 	\item Источник питания постоянного тока Б5-50;
 	\item Вольтметр универсальный GDM-8245;
 	\item Генератор низкочастотных сигналов ГЗ-112;
+	\item Установка, включающая диод и триод;
 \end{enumerate}
