--- a/source/theory.tex
+++ b/source/theory.tex
@@ -4,9 +4,9 @@
 
 Конструктивно диод состоит из баллона (стеклянного, металлического или керамического), в котором создается вакуум $\sim 10^{-7}$ мм ртутного столба, и системы плоских или цилиндрических электродов: катода и анода.
 
-Катод в простейшем случае представляет собой накаливаемую током вольфрамовую нить, которая при достаточно высокой температуре начинает испускать электроны (это явление получило название \textit{термоэлектронной эмиссии}). Но такие прямоканальные катоды применяются очень редко; значительно большее распространение получили катоды с косвенным подогревом, где источником электронов служит эмиттер, электрически изолированный от вольфрамового подогревателя. Преимуществом таких катодов является возможность питания подогревателя переменным током (вследствие достаточно большой инерционности всей системы) и эквипотенциальность поверхности эмиттера. Эмиттеры таких катодов часто покрываются тонкой пленкой из материалов, имеющих малую работу выхода электронов, что позволяет получить хорошую эмиссию при сравнительно небольшом подогреве.
+Катод в простейшем случае представляет собой накаливаемую током вольфрамовую нить, которая при достаточно высокой температуре начинает испускать электроны (это явление получило название \textit{термоэлектронной эмиссии}). Но такие прямоканальные катоды применяются очень редко; значительно большее распространение получили катоды с косвенным подогревом, где источником электронов служит эмиттер, электрически изолированный от вольфрамового подогревателя. Преимуществом таких катодов является возможность питания подогревателя переменным током (вследствие достаточно большой инерционности всей системы) и эквипотенциальность поверхности эмиттера. Эмиттеры таких катодов часто покрываются тонкой плёнкой из материалов, имеющих малую работу выхода электронов, что позволяет получить хорошую эмиссию при сравнительно небольшом подогреве.
 
-Если соединить анод с катодом через чувствительный гальванометр, то можно обнаружить в этой цепи анодный ток, величина определенная электрическая мощность. Электроны, излучаемые катодом, увеличивают свою кинетическую энергию за счет энергии электрического поля. При ударе об анод электрон отдает ему свою энергию. Энергия электронов выделяется на аноде в виде тепловой энергии и излучается им в окружающее пространство. С повышением анодного напряжения увеличивается количество достигших анода электронов, их скорость и кинетическая энергия, и, следовательно, возрастает и мощность, рассеиваемая анодом. Для каждого типа ламп существует максимальная допустимая величина этой мощности -- $P_{max}$. Превышение
+Если соединить анод с катодом через чувствительный гальванометр, то можно обнаружить в этой цепи анодный ток, величина определённая электрическая мощность. Электроны, излучаемые катодом, увеличивают свою кинетическую энергию за счет энергии электрического поля. При ударе об анод электрон отдаёт ему свою энергию. Энергия электронов выделяется на аноде в виде тепловой энергии и излучается им в окружающее пространство. С повышением анодного напряжения увеличивается количество достигших анода электронов, их скорость и кинетическая энергия, и, следовательно, возрастает и мощность, рассеиваемая анодом. Для каждого типа ламп существует максимальная допустимая величина этой мощности -- $P_{max}$. Превышение
 ее при работе ламп может вывести последнюю из строя. Величину мощности, рассеиваемой анодом, можно подсчитать по формуле
 \begin{equation} \label{eq:0}
 	P_a = U_a I_a
